# grpc

./: CHANGELOG.md  LICENSE  README.md  go.mod  go.sum
.github/workflows/: go-release.yml  go-test.yml
core/: go.mod  go.sum
core/healthcheck/: healthcheck.go
core/validator/: validator.go
core/validator_test/: validator_test.go
db/: db.go  db_test.go  go.mod  go.sum
examples/auth/fastapi/: README.md  docker-compose.yml
examples/auth/fastapi/api/: Dockerfile
examples/auth/fastapi/api/src/: .flake8  pyproject.toml
examples/auth/fastapi/api/src/app/: config.py  grpc.py  main.py
examples/auth/fastapi/api/src/app/authentication/: dependencies.py  routes.py  schemas.py
examples/auth/fastapi/auth/: Dockerfile
services/auth/: Dockerfile  README.md  go.mod  go.sum
services/auth/cmd/server/: main.go
services/auth/helpers/: test.go
services/auth/internal/migrate/: migrate.go  migrate_test.go
services/auth/internal/models/: access_token.go  reset_token.go  scope.go  setup_test.go  user-type.go  user.go  user_test.go  user_type_test.go  verify-token.go
services/auth/internal/repos/: setup_test.go  token.go  token_test.go  user.go  user_test.go
services/auth/pkg/api/auth/: auth.pb.go  auth.proto  auth_grpc.pb.go
services/auth/service/: service.go  service_test.go
services/email/: README.md  go.mod  go.sum
services/email/cmd/server/: main.go
services/email/internal/: boundary.go
services/email/pkg/api/email/: email.pb.go  email_grpc.pb.go
services/email/service/: service.go  service_test.go
testutils/: dockertest.go  go.mod  go.sum
