[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Stuart <stuart@accentdesign.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.0"}
grpcio = "^1.57.0"
orjson = "3.9.4"
protobuf = "^4.24.0"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "app.migrations.*",
  "protos.*"
]
ignore_errors = true

[tool.black]
line-length = 88
exclude = '''
  /(
    migrations
    | protos
  )/
'''

[tool.isort]
profile = "black"
extend_skip = [
  'migrations',
  'protos'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
